--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@types/three": "^0.177.0",
+    "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "babel-loader": "^9.1.2",
     "css-loader": "6.8.1",
     "eslint": "8.56.0",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.4.1",
     "html-webpack-plugin": "^5.6.3",
@@ -36,9 +38,12 @@
     "webpack-dev-server": "4.15.1"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "lil-gui": "^0.18.2",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "three": "^0.177.0"
+    "three": "^0.177.0",
+    "yarn": "^1.22.22"
   }
 }
